--- a/drivers/misc/mediatek/typec/fusb302b/Makefile
+++ b/drivers/misc/mediatek/typec/fusb302b/Makefile
@@ -1,7 +1,9 @@
+
 #
 # Makefile for the usb FUSB302 driver (if driver is inside kernel tree).
 #
 
+ccflags-y += -Wno-error
 ccflags-y += \
 		-DFSC_PLATFORM_LINUX \
 		-DFSC_HAVE_SNK \
