configs: more improvement

--- a/arch/arm64/configs/selene_defconfig
+++ b/arch/arm64/configs/selene_defconfig
@@ -1,6 +1,6 @@
 CONFIG_CROSS_COMPILE="aarch64-linux-android-"
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_LOCALVERSION="-Blueberry-CheeseCakeV1.0.1"
+CONFIG_LOCALVERSION="-Blueberry🫐-CheeseCakeV1.0.1"
 # CONFIG_FHANDLE is not set
 CONFIG_IKHEADERS=m
 CONFIG_LOG_BUF_SHIFT=21
@@ -451,6 +451,49 @@ CONFIG_MTK_IRTX_SUPPORT=y
 CONFIG_MTK_IRTX_PWM_SUPPORT=y
 CONFIG_HQ_SYSFS_SUPPORT=y
 #CONFIG_TOUCHSCREEN_MTK_NT36672=y
+CONFIG_CRYPTO_LZ4=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+CONFIG_MTK_COMBO=y
+CONFIG_MTK_COMBO_CHIP_CONSYS_6768=y
+CONFIG_MTK_COMBO_GPS=y
+CONFIG_MTK_COMBO_WIFI=y
+CONFIG_MTK_DHCPV6C_WIFI=y
+CONFIG_MTK_GPS_SUPPORT=y
+CONFIG_MTK_FMRADIO=y
+CONFIG_MTK_FM_CHIP="MT6631_FM"
+CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
+CONFIG_WLAN=y
+CONFIG_WLAN_DRV_BUILD_IN=y
+CONFIG_WLAN_VENDOR_ADMTEK=y
+CONFIG_WLAN_VENDOR_ATH=y
+CONFIG_WLAN_VENDOR_ATMEL=y
+CONFIG_WLAN_VENDOR_BROADCOM=y
+CONFIG_WLAN_VENDOR_CISCO=y
+CONFIG_WLAN_VENDOR_INTEL=y
+CONFIG_WLAN_VENDOR_INTERSIL=y
+CONFIG_WLAN_VENDOR_MARVELL=y
+CONFIG_WLAN_VENDOR_MEDIATEK=y
+CONFIG_WLAN_VENDOR_RALINK=y
+CONFIG_WLAN_VENDOR_REALTEK=y
+CONFIG_WLAN_VENDOR_RSI=y
+CONFIG_WLAN_VENDOR_ST=y
+CONFIG_WLAN_VENDOR_TI=y
+CONFIG_WLAN_VENDOR_ZYDAS=y
+CONFIG_WLAN_VENDOR_QUANTENNA=y
+CONFIG_MTK_COMBO_GPS=y
+CONFIG_MTK_COMBO_WIFI=y
+CONFIG_MTK_GPS_SUPPORT=y
+CONFIG_MTK_COMBO=y
+CONFIG_MTK_COMBO_CHIP_CONSYS_6768=y
+CONFIG_MTK_COMBO_CHIP="CONSYS_6768"
+CONFIG_MTK_COMBO_PLAT_PATH=""
+CONFIG_MTK_COMBO_BT=y
+CONFIG_MTK_IO_BOOST=y
+CONFIG_MTK_PERFMGR_TOUCH_BOOST=y
+CONFIG_MTK_SCHED_BOOST=y
+CONFIG_MTK_VOW_SUPPORT=y
+CONFIG_MTK_AUDIO_IPI=y
 # Huaqin add for HQ-147450 by feiwen at 2021/7/23 start
 # CONFIG_TOUCHSCREEN_MTK_FT8719P=y
 # Huaqin add for HQ-147450 by feiwen at 2021/7/23 end
